cargo-features = ["edition2021"]
[package]
name = "neo-vm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
murmur3 = "0.5.2"
lazy_static = "1.4.0"
num-derive = "0.4.0"
num-traits = "0.2.14"
serde = { version = "1.0.188", features = ["derive"] }